# agentcore-cli

./: .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LOCAL_DEV_SETUP.md  NOTICE  README.md  bun.build.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.unit.config.ts
.github/: pull_request_template.md
.github/workflows/: agent-restricted.yml  build-and-test.yml  codeql.yml  e2e-tests-weekly.yml  e2e-tests.yml  etoe-tests.yml  lint.yml  pr-size.yml  pr-title.yml  release.yml  slack-issue-notification.yml  strands-command.yml
docs/: commands.md  configuration.md  container-builds.md  gateway.md  local-development.md  mcp-tools.md  memory.md
etoe-tests/: create-deploy-invoke.test.ts
integ-tests/: add-remove-gateway.test.ts  add-remove-policy.test.ts  add-remove-resources.test.ts  create-edge-cases.test.ts  create-frameworks.test.ts  create-memory.test.ts  deploy.test.ts  help.test.ts  invoke-agent.test.ts  validate.test.ts
scripts/: bump-version.ts  preinstall-warnings.mjs
src/: index.ts
src/assets/: AGENTS.md
src/assets/mcp/python/: README.md  pyproject.toml  server.py
src/assets/mcp/python-lambda/: README.md  handler.py  pyproject.toml
src/cdk/: AGENTS.md  constants.ts  index.ts  logical-ids.ts
src/cli/: AGENTS.md  cli.ts  constants.ts  errors.ts  global-config.ts  index.ts  update-notifier.ts
src/lib/: AGENTS.md  constants.ts  index.ts
src/schema/: AGENTS.md  constants.ts  index.ts
src/test-utils/: cli-runner.ts  index.ts  (+3 more)
web-harness/: cli-constants-mock.ts
(+502 files in other folders)
