[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "MCP Server demonstrating HTTP tool patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli] >= 1.2.0",
    "httpx >= 0.27.0",
]

[project.scripts]
server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
